--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -108,7 +108,7 @@
                     android:src="@mipmap/paper"
                     app:fab_colorNormal="@color/colorPrimary"
                     app:fab_colorPressed="@color/colorPrimaryDark"
-                    app:fab_label="添加账号"
+                    app:fab_label="添加库存"
                     app:fab_size="mini" />
 
                 <com.github.clans.fab.FloatingActionButton
