--- a/app/src/main/res/layout/activity_edit_account.xml
+++ b/app/src/main/res/layout/activity_edit_account.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.dibage.accountb.activitys.AddAccountActivity">
+    tools:context="com.example.dibage.accountb.activitys.AddGoodsActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -75,7 +75,7 @@
                     android:background="@color/background_gray"
                     android:layout_height="match_parent"></LinearLayout>
                 <EditText
-                    android:id="@+id/etDescription"
+                    android:id="@+id/etName"
                     android:layout_weight="8"
                     android:layout_width="0dp"
                     android:layout_marginLeft="10dp"
@@ -130,7 +130,7 @@
                     android:background="@color/background_gray"
                     android:layout_height="match_parent"></LinearLayout>
                 <EditText
-                    android:id="@+id/etUsername"
+                    android:id="@+id/etRemain"
                     android:layout_weight="8"
                     android:layout_width="0dp"
                     android:layout_marginLeft="10dp"
@@ -185,7 +185,7 @@
                     android:background="@color/background_gray"
                     android:layout_height="match_parent"></LinearLayout>
                 <EditText
-                    android:id="@+id/etPassword"
+                    android:id="@+id/etCategory"
                     android:layout_weight="8"
                     android:layout_width="0dp"
                     android:layout_marginLeft="10dp"
