--- a/app/src/main/res/layout/pop_menu.xml
+++ b/app/src/main/res/layout/pop_menu.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:text="修改账号"
+            android:text="修改库存信息"
             android:textSize="17sp" />
 
 
@@ -47,7 +47,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:text="删除该账号"
+            android:text="删除该产品"
             android:textSize="17sp" />
 
 
@@ -56,24 +56,6 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/background_gray" />
-    <LinearLayout
-        android:id="@+id/layout3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/touch_layout"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="复制内容并新建"
-            android:textSize="17sp" />
-
-
-    </LinearLayout>
 
 
 </LinearLayout>
