--- a/app/src/main/res/drawable/corners_card_yellow.xml
+++ b/app/src/main/res/drawable/corners_card_yellow.xml
@@ -2,13 +2,13 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- 设置填充颜色 -->
-    <solid android:color="@color/RedCard" />
+    <solid android:color="@color/YellowCard" />
 
     <!-- 设置几何图形四个角的弧度 -->
     <corners android:radius="6dp"/>
 
     <!-- 设置边框颜色  以及宽度 -->
-    <stroke android:color="@color/RedCard"
+    <stroke android:color="@color/YellowCard"
         android:width="1dp"/>
 
 </shape>
