--- a/app/src/main/res/layout/item_goods.xml
+++ b/app/src/main/res/layout/item_goods.xml
@@ -7,6 +7,7 @@
     android:layout_marginBottom="5dp"
     android:background="@drawable/corners_card"
     android:orientation="vertical"
+    android:id="@+id/rootLayout"
     android:layout_height="100dp">
 
     <LinearLayout
