--- a/app/src/main/res/layout/activity_add_account.xml
+++ b/app/src/main/res/layout/activity_add_account.xml
@@ -341,11 +341,12 @@
                     android:background="@color/background_gray"
                     android:layout_height="match_parent"></LinearLayout>
                 <TextView
-                    android:gravity="center"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_weight="3"
                     android:textSize="16sp"
+                    android:gravity="center"
+                    android:layout_gravity="center_vertical"
                     android:text="备注"/>
                 <LinearLayout
                     android:layout_width="2px"
@@ -356,10 +357,15 @@
                     android:layout_weight="8"
                     android:layout_width="0dp"
                     android:layout_marginLeft="10dp"
+                    android:layout_gravity="center_vertical"
                     android:hint="(可选填)"
                     android:singleLine="true"
                     android:textSize="16sp"
+                    android:maxHeight="100dp"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
                     android:background="@null"
+                    android:inputType="textMultiLine"
                     android:layout_height="wrap_content" />
 
                 <ImageButton
