--- a/app/src/main/res/menu/toolbar.xml
+++ b/app/src/main/res/menu/toolbar.xml
@@ -8,6 +8,7 @@
         app:showAsAction="ifRoom"
         android:icon="@mipmap/card"
         android:orderInCategory="1"
+        android:visible="false"
         />
     <item android:id="@+id/action_search"
         android:orderInCategory="2"
