--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -22,24 +22,30 @@
             android:id="@+id/et_search"
             android:layout_width="270dp"
             android:maxLength="10"
+            android:layout_weight="10"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="20dp"
             android:background="@null"
+            android:paddingTop="@dimen/dp_10"
+            android:paddingBottom="@dimen/dp_10"
             android:inputType="text"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:ems="10"
-            android:hint="查找账号……" />
+            android:hint="输入产品型号或种类查找……" />
 
         <Button
             android:id="@+id/btn_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
+            android:layout_marginRight="2dp"
+            android:gravity="center"
+            android:layout_weight="1"
             android:background="#00000000"
             android:text="取消"
+            android:padding="2dp"
             android:textColor="@color/GrayDark"
             android:textSize="16sp" />
 
@@ -52,20 +58,7 @@
 
     </LinearLayout>
 
-    <!--<LinearLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:layout_gravity="center_horizontal"-->
-    <!--android:orientation="vertical">-->
 
-    <!--<TextView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_gravity="center_horizontal"-->
-    <!--android:layout_marginTop="50dp"-->
-    <!--android:gravity="center"-->
-    <!--android:text="请输入关键字" />-->
-    <!--</LinearLayout>-->
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -87,9 +80,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:overScrollMode="never"
+            android:visibility="gone"
             android:scrollbars="none">
-
         </ListView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:overScrollMode="never">
+        </android.support.v7.widget.RecyclerView>
     </FrameLayout>
 
 
