--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,6 +16,7 @@
         android:layout_marginBottom="68dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
+        android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline2">
 
@@ -43,6 +44,7 @@
         android:layout_marginBottom="68dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
+        android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline2">
 
