--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -39,16 +39,22 @@
             android:layout_height="match_parent"
             app:srlAccentColor="@android:color/white"
             app:srlEnablePreviewInEditMode="true"
-            app:srlPrimaryColor="#444444">
+            app:srlPrimaryColor="@color/colorPrimary">
 
             <com.scwang.smartrefresh.layout.header.ClassicsHeader
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerView"
+            <ezy.ui.layout.LoadingLayout
+                android:id="@+id/loadingLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+                android:layout_height="match_parent"
+                app:llEmptyText="空空如也">
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+            </ezy.ui.layout.LoadingLayout>
         </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
         <LinearLayout
