--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -42,6 +42,7 @@
             app:srlPrimaryColor="@color/colorPrimary">
 
             <com.scwang.smartrefresh.layout.header.ClassicsHeader
+                android:id="@+id/header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
