--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
     <color name="Red">#FF0000</color>
     <color name="RedCard">#CC3333</color>
     <color name="YellowCard">#FF9900</color>
+    <color name="GreenCard">#71C727</color>
 
 
 
